--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>React todoMVC with Cypress Tests</title>
+    <title>Cypress Project</title>
     <meta charset="utf-8">
     <meta content="author" description="Cypress">
   </head>
